--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@discordjs/opus": "^0.9.0",
     "audify": "^1.9.0",
     "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1",
