--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ws": "^8.18.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
   "type": "module",
   "name": "dserver",
